--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,21 @@ build-backend = "hatchling.build"
 
 [project]
 name = "dgh"
-version = "0.1.3"
+version = "0.1.4"
 authors = [
   {name="Vladyslav Oles", email="vlad.oles@proton.me"},
 ]
 description = "Computing the Gromov–Hausdorff distance"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.5"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+]
+dependencies = [
+  'numpy >= 1.13.0',
+  'jax >= 0.3.0',
 ]
 
 [project.urls]
