--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "hatchling.build"
 
 [project]
 name = "dgh"
-version = "0.1.4"
+version = "0.1.9"
 authors = [
   {name="Vladyslav Oles", email="vlad.oles@proton.me"},
 ]
-description = "Computing the Gromov–Hausdorff distance"
+description = "computing the Gromov–Hausdorff distance"
 readme = "README.md"
 requires-python = ">=3.5"
 classifiers = [
@@ -17,8 +17,13 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-  'numpy >= 1.13.0',
-  'jax >= 0.3.0',
+  "numpy >= 1.17.0"
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest >= 7.0",
+    "scipy >= 0.7.0"
 ]
 
 [project.urls]
